--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "uos": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
+    "vue-scrollto": "^2.17.1",
     "vuetify": "^1.5.14"
   },
   "devDependencies": {
