--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "eslint-utils": "^1.4.1",
     "uos": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
